tests/NormalTests/paczka2/big_fuzzy/41176152.err
Error in line 4: eiJE A418 26,8
Error in line 13: 8apmpj A418 37,8
Error in line 16: fABO5Fo6YD A418 95,5
Error in line 22: CrySf5TeiH S510 0,9
Error in line 15: A976 A418 198,3
Error in line 21: CcJdTZv7r5s A976 10,6
Error in line 27: 8apmpj A976 14,0
Error in line 20: fABO5Fo6YD A976 34,0
Error in line 39: A976 S510 132,48
Error in line 25: A976 S510 36,8
Error in line 43: xmdvc5IqQn S510 63,1
Error in line 68: 8apmpj S510 93,2
Error in line 81: A976 S303 45,5
Error in line 77: CrySf5TeiH S303 36,9
Error in line 102: fABO5Fo6YD S303 52,1
Error in line 103: fABO5Fo6YD A418 21,2
Error in line 106: fABO5Fo6YD S510 110,1
Error in line 117: A9e6 A9e6 15,6
Error in line 116: A976 S510 7,9
Error in line 115: fABO5Fo6YD A976 28,9
Error in line 120: eiJE A976 99,1
Error in line 126: eiJE S303 60,3
Error in line 127: eiJE A976 31,7
Error in line 134: xmdvc5IqQn A418 72,6
Error in line 146: CrySf5TeiH S510 68,7
Error in line 141: 8apmpj A976 72,0
Error in line 144: CcJdTZv7r5s S303 16,3
Error in line 147: CrySf5TeiH S303 3,9
Error in line 160: 8apmpj S303 75,6
Error in line 173: CcJdTZv7r5s S510 70,3
Error in line 179: A976 Ab18 7b,7
Error in line 182: xmdvc5IqQn A976 -1,7
Error in line 164: eiJE A418 101,5
Error in line 187: eiJE S303 95,8
Error in line 192: CcJdTZv7r5s S510 13,2
Error in line 180: A976 A418 357,1
Error in line 201: A976 S510 61,4
Error in line 203: A976 A418 58,0
Error in line 199: CrySf5TeiH A976 135,4
Error in line 194: 8apmpj S510 79,0
Error in line 218: CrySf5TeiH A4Y8 63,3
Error in line 206: CcJdTZv7r5s A418 389,4
Error in line 238: eiJE S303 9,43
Error in line 246: fABO5Fo6YD S303 49,8
Error in line 247: fABO5Fo6YD A418 53,8
